--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -227,7 +227,7 @@
 
                                     <!-- Sub Menu Item -->
                                     <li class="nav-item">
-                                        <a class="sub-menu-link" href="./pages/payment.html">
+                                        <a class="sub-menu-link" href="{% url 'payment' %}">
                                             <span class="d2c_icon">
                                                 <i class="fas fa-money-check-alt"></i>
                                             </span>
@@ -240,7 +240,7 @@
 
                                     <!-- Sub Menu Item -->
                                     <li class="nav-item">
-                                        <a class="sub-menu-link" href="./pages/transaction.html">
+                                        <a class="sub-menu-link" href="{% url 'transaction' %}">
                                             <span class="d2c_icon">
                                                 <i class="fas fa-list-alt"></i>
                                             </span>
@@ -253,7 +253,7 @@
 
                                     <!-- Sub Menu Item -->
                                     <li class="nav-item">
-                                        <a class="sub-menu-link" href="./pages/wallet.html">
+                                        <a class="sub-menu-link" href="{% url 'wallet' %}">
                                             <span class="d2c_icon">
                                                 <i class="fas fa-wallet"></i>
                                             </span>
@@ -266,7 +266,7 @@
 
                                     <!-- Sub Menu Item -->
                                     <li class="nav-item">
-                                        <a class="sub-menu-link" href="./pages/investment.html">
+                                        <a class="sub-menu-link" href="{% url 'investment' %}">
                                             <span class="d2c_icon">
                                                 <i class="fas fa-network-wired"></i>
                                             </span>
@@ -281,7 +281,7 @@
 
                                     <!-- Sub Menu Item -->
                                     <li class="nav-item">
-                                        <a class="sub-menu-link" href="./pages/stocksFund.html">
+                                        <a class="sub-menu-link" href="{% url 'stocksFund' %}">
                                             <span class="d2c_icon">
                                                 <i class="fas fa-chart-line"></i>
                                             </span>
